--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <p>This is my first GitHub Pages site!</p>
+    <p>I'm Yogeendra Rao</p>
+
 </body>
 </html>
