--- a/index.html
+++ b/index.html
@@ -3,11 +3,542 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title>Yogeendra R Rao - Resume</title>
+    <style>
+:root {
+  --color-white: rgba(255, 255, 255, 1);
+  --color-black: rgba(0, 0, 0, 1);
+  --color-cream-50: rgba(252, 252, 249, 1);
+  --color-cream-100: rgba(255, 255, 253, 1);
+  --color-gray-200: rgba(245, 245, 245, 1);
+  --color-gray-300: rgba(167, 169, 169, 1);
+  --color-gray-400: rgba(119, 124, 124, 1);
+  --color-slate-500: rgba(98, 108, 113, 1);
+  --color-brown-600: rgba(94, 82, 64, 1);
+  --color-charcoal-700: rgba(31, 33, 33, 1);
+  --color-charcoal-800: rgba(38, 40, 40, 1);
+  --color-slate-900: rgba(19, 52, 59, 1);
+  --color-teal-300: rgba(50, 184, 198, 1);
+  --color-teal-400: rgba(45, 166, 178, 1);
+  --color-teal-500: rgba(33, 128, 141, 1);
+  --color-teal-600: rgba(29, 116, 128, 1);
+  --color-teal-700: rgba(26, 104, 115, 1);
+  --color-brown-600-rgb: 94, 82, 64;
+  --color-teal-500-rgb: 33, 128, 141;
+  --color-slate-900-rgb: 19, 52, 59;
+  --color-background: var(--color-cream-50);
+  --color-surface: var(--color-cream-100);
+  --color-text: var(--color-slate-900);
+  --color-text-secondary: var(--color-slate-500);
+  --color-primary: var(--color-teal-500);
+  --color-primary-hover: var(--color-teal-600);
+  --color-border: rgba(var(--color-brown-600-rgb), 0.2);
+  --color-card-border: rgba(var(--color-brown-600-rgb), 0.12);
+  --font-family-base: "FKGroteskNeue", "Geist", "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  --font-size-xs: 11px;
+  --font-size-sm: 12px;
+  --font-size-base: 14px;
+  --font-size-lg: 16px;
+  --font-size-xl: 18px;
+  --font-size-2xl: 20px;
+  --font-size-3xl: 24px;
+  --font-size-4xl: 30px;
+  --font-weight-normal: 400;
+  --font-weight-medium: 500;
+  --font-weight-semibold: 550;
+  --font-weight-bold: 600;
+  --line-height-tight: 1.2;
+  --line-height-normal: 1.5;
+  --space-4: 4px;
+  --space-6: 6px;
+  --space-8: 8px;
+  --space-12: 12px;
+  --space-16: 16px;
+  --space-20: 20px;
+  --space-24: 24px;
+  --space-32: 32px;
+  --space-40: 40px;
+  --radius-base: 8px;
+  --radius-lg: 12px;
+  --shadow-sm: 0 1px 3px rgba(0, 0, 0, 0.04), 0 1px 2px rgba(0, 0, 0, 0.02);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-gray-400-rgb: 119, 124, 124;
+    --color-teal-300-rgb: 50, 184, 198;
+    --color-gray-300-rgb: 167, 169, 169;
+    --color-gray-200-rgb: 245, 245, 245;
+    --color-background: var(--color-charcoal-700);
+    --color-surface: var(--color-charcoal-800);
+    --color-text: var(--color-gray-200);
+    --color-text-secondary: rgba(var(--color-gray-300-rgb), 0.7);
+    --color-primary: var(--color-teal-300);
+    --color-primary-hover: var(--color-teal-400);
+    --color-border: rgba(var(--color-gray-400-rgb), 0.3);
+    --color-card-border: rgba(var(--color-gray-400-rgb), 0.2);
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: var(--font-family-base);
+  font-size: var(--font-size-base);
+  line-height: var(--line-height-normal);
+  color: var(--color-text);
+  background-color: var(--color-background);
+  -webkit-font-smoothing: antialiased;
+}
+
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: var(--space-40) var(--space-20);
+}
+
+.header {
+  text-align: center;
+  margin-bottom: var(--space-40);
+  padding-bottom: var(--space-32);
+  border-bottom: 2px solid var(--color-border);
+}
+
+.header h1 {
+  font-size: var(--font-size-4xl);
+  font-weight: var(--font-weight-bold);
+  margin-bottom: var(--space-8);
+  color: var(--color-text);
+}
+
+.header .title {
+  font-size: var(--font-size-xl);
+  color: var(--color-primary);
+  font-weight: var(--font-weight-medium);
+  margin-bottom: var(--space-16);
+}
+
+.contact-info {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: var(--space-16);
+  font-size: var(--font-size-sm);
+  color: var(--color-text-secondary);
+}
+
+.contact-info a {
+  color: var(--color-primary);
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+.contact-info a:hover {
+  color: var(--color-primary-hover);
+}
+
+.section {
+  margin-bottom: var(--space-40);
+}
+
+.section-title {
+  font-size: var(--font-size-2xl);
+  font-weight: var(--font-weight-semibold);
+  color: var(--color-text);
+  margin-bottom: var(--space-20);
+  padding-bottom: var(--space-8);
+  border-bottom: 1px solid var(--color-border);
+}
+
+.summary {
+  font-size: var(--font-size-lg);
+  line-height: 1.6;
+  color: var(--color-text-secondary);
+}
+
+.experience-item,
+.education-item,
+.project-item {
+  margin-bottom: var(--space-24);
+  padding: var(--space-20);
+  background: var(--color-surface);
+  border-radius: var(--radius-lg);
+  border: 1px solid var(--color-card-border);
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.experience-item:hover,
+.education-item:hover,
+.project-item:hover {
+  transform: translateY(-2px);
+  box-shadow: var(--shadow-sm);
+}
+
+.item-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: var(--space-12);
+  flex-wrap: wrap;
+  gap: var(--space-8);
+}
+
+.item-title {
+  font-size: var(--font-size-lg);
+  font-weight: var(--font-weight-semibold);
+  color: var(--color-text);
+}
+
+.item-company {
+  font-size: var(--font-size-base);
+  color: var(--color-primary);
+  font-weight: var(--font-weight-medium);
+}
+
+.item-date {
+  font-size: var(--font-size-sm);
+  color: var(--color-text-secondary);
+  white-space: nowrap;
+}
+
+.item-description {
+  color: var(--color-text-secondary);
+  line-height: 1.6;
+}
+
+.item-description ul {
+  margin-left: var(--space-20);
+  margin-top: var(--space-8);
+}
+
+.item-description li {
+  margin-bottom: var(--space-6);
+}
+
+.skills-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: var(--space-20);
+}
+
+.skill-category {
+  background: var(--color-surface);
+  padding: var(--space-20);
+  border-radius: var(--radius-base);
+  border: 1px solid var(--color-card-border);
+}
+
+.skill-category h3 {
+  font-size: var(--font-size-base);
+  font-weight: var(--font-weight-semibold);
+  color: var(--color-primary);
+  margin-bottom: var(--space-12);
+}
+
+.skill-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--space-8);
+}
+
+.skill-tag {
+  display: inline-block;
+  padding: var(--space-6) var(--space-12);
+  background: rgba(var(--color-teal-500-rgb), 0.1);
+  color: var(--color-text);
+  border-radius: 20px;
+  font-size: var(--font-size-sm);
+  font-weight: var(--font-weight-medium);
+  border: 1px solid rgba(var(--color-teal-500-rgb), 0.2);
+}
+
+.interests-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--space-12);
+}
+
+.interest-item {
+  display: flex;
+  align-items: center;
+  gap: var(--space-8);
+  padding: var(--space-12) var(--space-16);
+  background: var(--color-surface);
+  border-radius: var(--radius-base);
+  border: 1px solid var(--color-card-border);
+  font-size: var(--font-size-sm);
+}
+
+.interest-icon {
+  font-size: var(--font-size-lg);
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: var(--space-24) var(--space-16);
+  }
+
+  .header h1 {
+    font-size: var(--font-size-3xl);
+  }
+
+  .contact-info {
+    flex-direction: column;
+    align-items: center;
+    gap: var(--space-8);
+  }
+
+  .item-header {
+    flex-direction: column;
+  }
+
+  .skills-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media print {
+  body {
+    background: white;
+  }
+
+  .container {
+    max-width: 100%;
+    padding: 20px;
+  }
+
+  .experience-item,
+  .education-item,
+  .project-item,
+  .skill-category {
+    page-break-inside: avoid;
+    box-shadow: none;
+    border: 1px solid #ddd;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+@font-face {
+  font-family: 'FKGroteskNeue';
+  src: url('https://r2cdn.perplexity.ai/fonts/FKGroteskNeue.woff2') format('woff2');
+}
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>I'm Yogeendra Rao</p>
+    <div class="container">
+        <header class="header">
+            <h1>Yogeendra R Rao</h1>
+            <div class="title">Technology Professional | Content Creator | Database Developer</div>
+            <div class="contact-info">
+                <span>📍 Udupi, Karnataka, India</span>
+                <span>📧 <a href="mailto:yogeendra.r@gmail.com">yogeendra.r@gmail.com</a></span>
+                <span>💼 <a href="https://instagram.com/learntomystery" target="_blank" rel="noopener noreferrer">@learntomystery</a></span>
+                <span>🔗 <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer">GitHub</a></span>
+            </div>
+        </header>
 
+        <section class="section">
+            <h2 class="section-title">Professional Summary</h2>
+            <p class="summary">
+                Technology professional with expertise in database development and web technologies, combined with entrepreneurial experience in digital content creation. Proven track record in Oracle SQL development, automation implementation, and building engaged online communities. Passionate about leveraging technology to create educational content and optimize workflows. Strong analytical skills with deep interest in financial markets and investment analysis.
+            </p>
+        </section>
+
+        <section class="section">
+            <h2 class="section-title">Professional Experience</h2>
+            
+            <div class="experience-item">
+                <div class="item-header">
+                    <div>
+                        <div class="item-title">Founder & Content Creator</div>
+                        <div class="item-company">Learn To Mastery</div>
+                    </div>
+                    <div class="item-date">2024 - Present</div>
+                </div>
+                <div class="item-description">
+                    <ul>
+                        <li>Built and manage educational social media presence focused on personal development and skill mastery</li>
+                        <li>Create engaging Instagram reels and posts covering productivity, self-improvement, and financial literacy</li>
+                        <li>Implement content automation workflows using N8N to optimize posting schedules and engagement</li>
+                        <li>Design custom graphics and logos for brand identity using digital art tools</li>
+                        <li>Develop YouTube automation strategies for scalable content distribution</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="experience-item">
+                <div class="item-header">
+                    <div>
+                        <div class="item-title">Database Developer</div>
+                        <div class="item-company">Technology Sector</div>
+                    </div>
+                    <div class="item-date">Previous Experience</div>
+                </div>
+                <div class="item-description">
+                    <ul>
+                        <li>Developed and optimized complex Oracle SQL queries for enterprise database systems</li>
+                        <li>Implemented database solutions using Oracle DBMS_LOB functions for large object handling</li>
+                        <li>Created efficient data retrieval and manipulation procedures to improve system performance</li>
+                        <li>Collaborated with cross-functional teams to design database architecture and optimize workflows</li>
+                        <li>Maintained data integrity and implemented backup and recovery procedures</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="experience-item">
+                <div class="item-header">
+                    <div>
+                        <div class="item-title">Web Technology Specialist</div>
+                        <div class="item-company">Various Projects</div>
+                    </div>
+                    <div class="item-date">Ongoing</div>
+                </div>
+                <div class="item-description">
+                    <ul>
+                        <li>Designed and implemented web architectures including DNS, load balancers, and CDN integration</li>
+                        <li>Developed complete understanding of URL-to-browser rendering process flow</li>
+                        <li>Created responsive web applications with modern HTML, CSS, and JavaScript</li>
+                        <li>Implemented browser automation and web scraping solutions for data collection</li>
+                        <li>Optimized web performance and user experience across multiple devices</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <h2 class="section-title">Technical Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h3>Database & Backend</h3>
+                    <div class="skill-list">
+                        <span class="skill-tag">Oracle SQL</span>
+                        <span class="skill-tag">DBMS_LOB</span>
+                        <span class="skill-tag">Query Optimization</span>
+                        <span class="skill-tag">Database Design</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h3>Web Technologies</h3>
+                    <div class="skill-list">
+                        <span class="skill-tag">HTML/CSS</span>
+                        <span class="skill-tag">JavaScript</span>
+                        <span class="skill-tag">DNS/CDN</span>
+                        <span class="skill-tag">Web Architecture</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h3>Automation & Tools</h3>
+                    <div class="skill-list">
+                        <span class="skill-tag">N8N Workflows</span>
+                        <span class="skill-tag">Excel Advanced</span>
+                        <span class="skill-tag">Content Automation</span>
+                        <span class="skill-tag">YouTube Automation</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h3>Design & Content</h3>
+                    <div class="skill-list">
+                        <span class="skill-tag">Digital Art</span>
+                        <span class="skill-tag">Logo Design</span>
+                        <span class="skill-tag">Social Media</span>
+                        <span class="skill-tag">Content Creation</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <h2 class="section-title">Key Projects</h2>
+            
+            <div class="project-item">
+                <div class="item-header">
+                    <div>
+                        <div class="item-title">Instagram Content Automation System</div>
+                    </div>
+                    <div class="item-date">2025</div>
+                </div>
+                <div class="item-description">
+                    Developed automated workflow using N8N for scheduling and posting Instagram reels. Implemented content pipeline from creation to publication, optimizing posting times for maximum engagement and audience reach.
+                </div>
+            </div>
+
+            <div class="project-item">
+                <div class="item-header">
+                    <div>
+                        <div class="item-title">Financial Analysis Dashboard</div>
+                    </div>
+                    <div class="item-date">2025</div>
+                </div>
+                <div class="item-description">
+                    Created comprehensive Excel-based tracking system for stock market analysis, USD-INR exchange rate monitoring, and portfolio performance visualization. Includes automated calculations for 52-week highs/lows and EPS projections.
+                </div>
+            </div>
+
+            <div class="project-item">
+                <div class="item-header">
+                    <div>
+                        <div class="item-title">Learn To Mastery Brand Identity</div>
+                    </div>
+                    <div class="item-date">2024-2025</div>
+                </div>
+                <div class="item-description">
+                    Designed complete brand identity including logo design with custom color scheme (orange and black), Instagram bio optimization, and visual content strategy. Created engaging artwork including digital pencil drawings and thematic posts.
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <h2 class="section-title">Interests & Professional Development</h2>
+            <div class="interests-list">
+                <div class="interest-item">
+                    <span class="interest-icon">📈</span>
+                    <span>Financial Markets & Investment Analysis</span>
+                </div>
+                <div class="interest-item">
+                    <span class="interest-icon">📚</span>
+                    <span>Self-Improvement Literature</span>
+                </div>
+                <div class="interest-item">
+                    <span class="interest-icon">🎯</span>
+                    <span>Productivity & Time Management</span>
+                </div>
+                <div class="interest-item">
+                    <span class="interest-icon">💻</span>
+                    <span>Technology & Automation</span>
+                </div>
+                <div class="interest-item">
+                    <span class="interest-icon">🎨</span>
+                    <span>Digital Art & Design</span>
+                </div>
+                <div class="interest-item">
+                    <span class="interest-icon">📱</span>
+                    <span>Social Media Strategy</span>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <h2 class="section-title">Notable Reading</h2>
+            <div class="item-description">
+                <ul>
+                    <li><strong>Eat That Frog</strong> by Brian Tracy - Task prioritization and productivity</li>
+                    <li><strong>Master Your Mindset</strong> - Personal development and mental frameworks</li>
+                    <li><strong>I Will Teach You to Be Rich</strong> - Personal finance and investment strategies</li>
+                    <li><strong>How to Finish Everything You Start</strong> - Project completion and focus management</li>
+                </ul>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
