--- a/index.html
+++ b/index.html
@@ -336,19 +336,19 @@ body {
     <div class="container">
         <header class="header">
             <h1>Yogeendra R Rao</h1>
-            <div class="title">Technology Professional | Content Creator | Database Developer</div>
+            <div class="title">Technology Professional | Database Developer | Java Developer</div>
             <div class="contact-info">
-                <span>📍 Udupi, Karnataka, India</span>
-                <span>📧 <a href="mailto:yogeendra.r@gmail.com">yogeendra.r@gmail.com</a></span>
-                <span>💼 <a href="https://instagram.com/learntomystery" target="_blank" rel="noopener noreferrer">@learntomystery</a></span>
-                <span>🔗 <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer">GitHub</a></span>
+                <span>📍 Bengaluru, Karnataka, India</span>
+                <span><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align: middle; margin-right: 4px;"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg> <a href="mailto:yogeendra.r@gmail.com">yogeendra.r@gmail.com</a></span>
+                <span><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align: middle; margin-right: 4px;"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg> <a href="https://www.linkedin.com/in/yogeendrarao/" target="_blank" rel="noopener noreferrer">LinkedIn</a></span>
+                <span><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align: middle; margin-right: 4px;"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg> <a href="https://github.com/yogeendra" target="_blank" rel="noopener noreferrer">GitHub</a></span>
             </div>
         </header>
 
         <section class="section">
             <h2 class="section-title">Professional Summary</h2>
             <p class="summary">
-                Technology professional with expertise in database development and web technologies, combined with entrepreneurial experience in digital content creation. Proven track record in Oracle SQL development, automation implementation, and building engaged online communities. Passionate about leveraging technology to create educational content and optimize workflows. Strong analytical skills with deep interest in financial markets and investment analysis.
+                Technology professional with expertise in database development, Java programming, and cloud infrastructure. Proven track record in Oracle SQL development, OCR implementation, infrastructure automation with Terraform, and generative AI integration. Strong analytical skills with experience in building scalable applications and implementing modern DevOps practices. Deep interest in financial technology and continuous learning through reading technical books and documentation.
             </p>
         </section>
 
@@ -358,18 +358,18 @@ body {
             <div class="experience-item">
                 <div class="item-header">
                     <div>
-                        <div class="item-title">Founder & Content Creator</div>
-                        <div class="item-company">Learn To Mastery</div>
+                        <div class="item-title">Java Application Developer</div>
+                        <div class="item-company">Technology Projects</div>
                     </div>
-                    <div class="item-date">2024 - Present</div>
+                    <div class="item-date">Recent</div>
                 </div>
                 <div class="item-description">
                     <ul>
-                        <li>Built and manage educational social media presence focused on personal development and skill mastery</li>
-                        <li>Create engaging Instagram reels and posts covering productivity, self-improvement, and financial literacy</li>
-                        <li>Implement content automation workflows using N8N to optimize posting schedules and engagement</li>
-                        <li>Design custom graphics and logos for brand identity using digital art tools</li>
-                        <li>Develop YouTube automation strategies for scalable content distribution</li>
+                        <li>Developed Java OCR application using Tesseract and Tess4J library for text extraction from images</li>
+                        <li>Implemented image processing solutions to convert scanned documents into searchable text formats</li>
+                        <li>Explored Generative AI integration in Java applications using Spring AI framework</li>
+                        <li>Built RESTful APIs using Spring Boot for enterprise application development</li>
+                        <li>Contributed to open-source projects focused on Java and AI technologies</li>
                     </ul>
                 </div>
             </div>
@@ -396,18 +396,18 @@ body {
             <div class="experience-item">
                 <div class="item-header">
                     <div>
-                        <div class="item-title">Web Technology Specialist</div>
-                        <div class="item-company">Various Projects</div>
+                        <div class="item-title">DevOps & Infrastructure Engineer</div>
+                        <div class="item-company">Cloud Infrastructure Projects</div>
                     </div>
-                    <div class="item-date">Ongoing</div>
+                    <div class="item-date">Recent</div>
                 </div>
                 <div class="item-description">
                     <ul>
-                        <li>Designed and implemented web architectures including DNS, load balancers, and CDN integration</li>
-                        <li>Developed complete understanding of URL-to-browser rendering process flow</li>
-                        <li>Created responsive web applications with modern HTML, CSS, and JavaScript</li>
-                        <li>Implemented browser automation and web scraping solutions for data collection</li>
-                        <li>Optimized web performance and user experience across multiple devices</li>
+                        <li>Implemented Infrastructure as Code (IaC) using Terraform for AWS cloud deployments</li>
+                        <li>Deployed scalable WordPress applications on AWS with EC2, RDS, and EFS integration</li>
+                        <li>Designed and implemented multi-tier cloud architectures with public and private subnets</li>
+                        <li>Created automated deployment pipelines for web applications and databases</li>
+                        <li>Managed cloud resources including compute instances, storage, and networking components</li>
                     </ul>
                 </div>
             </div>
@@ -437,22 +437,22 @@ body {
                 </div>
 
                 <div class="skill-category">
-                    <h3>Automation & Tools</h3>
+                    <h3>Programming Languages</h3>
                     <div class="skill-list">
-                        <span class="skill-tag">N8N Workflows</span>
-                        <span class="skill-tag">Excel Advanced</span>
-                        <span class="skill-tag">Content Automation</span>
-                        <span class="skill-tag">YouTube Automation</span>
+                        <span class="skill-tag">Java</span>
+                        <span class="skill-tag">Spring Boot</span>
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">Shell Scripting</span>
                     </div>
                 </div>
 
                 <div class="skill-category">
-                    <h3>Design & Content</h3>
+                    <h3>DevOps & Cloud</h3>
                     <div class="skill-list">
-                        <span class="skill-tag">Digital Art</span>
-                        <span class="skill-tag">Logo Design</span>
-                        <span class="skill-tag">Social Media</span>
-                        <span class="skill-tag">Content Creation</span>
+                        <span class="skill-tag">Terraform</span>
+                        <span class="skill-tag">AWS (EC2, RDS, EFS)</span>
+                        <span class="skill-tag">Git/GitHub</span>
+                        <span class="skill-tag">CI/CD</span>
                     </div>
                 </div>
             </div>
@@ -464,36 +464,36 @@ body {
             <div class="project-item">
                 <div class="item-header">
                     <div>
-                        <div class="item-title">Instagram Content Automation System</div>
+                        <div class="item-title">TesseractExample - Java OCR Application</div>
                     </div>
-                    <div class="item-date">2025</div>
+                    <div class="item-date">GitHub Repository</div>
                 </div>
                 <div class="item-description">
-                    Developed automated workflow using N8N for scheduling and posting Instagram reels. Implemented content pipeline from creation to publication, optimizing posting times for maximum engagement and audience reach.
+                    Developed Java application using Tesseract OCR engine and Tess4J JNI wrapper for optical character recognition. Implemented image-to-text conversion functionality for processing scanned documents and extracting text from images. Utilized Maven for dependency management and demonstrated practical implementation of OCR technology in Java environment.
                 </div>
             </div>
 
             <div class="project-item">
                 <div class="item-header">
                     <div>
-                        <div class="item-title">Financial Analysis Dashboard</div>
+                        <div class="item-title">Terraform WordPress Deployment on AWS</div>
                     </div>
-                    <div class="item-date">2025</div>
+                    <div class="item-date">Infrastructure Project</div>
                 </div>
                 <div class="item-description">
-                    Created comprehensive Excel-based tracking system for stock market analysis, USD-INR exchange rate monitoring, and portfolio performance visualization. Includes automated calculations for 52-week highs/lows and EPS projections.
+                    Implemented Infrastructure as Code solution using Terraform to deploy WordPress on AWS cloud platform. Created multi-tier architecture with EC2 instances in public subnets and RDS database in private subnets. Configured security groups, networking, and automated deployment scripts for scalable web application hosting.
                 </div>
             </div>
 
             <div class="project-item">
                 <div class="item-header">
                     <div>
-                        <div class="item-title">Learn To Mastery Brand Identity</div>
+                        <div class="item-title">Generative AI for Java Beginners</div>
                     </div>
-                    <div class="item-date">2024-2025</div>
+                    <div class="item-date">Learning Project</div>
                 </div>
                 <div class="item-description">
-                    Designed complete brand identity including logo design with custom color scheme (orange and black), Instagram bio optimization, and visual content strategy. Created engaging artwork including digital pencil drawings and thematic posts.
+                    Explored Microsoft's Generative AI for Java beginners course, learning fundamentals of integrating Large Language Models (LLMs) into Java applications. Studied concepts including tokens, embeddings, and Spring AI framework integration. Hands-on experience with building AI-powered Java applications and understanding the Java AI ecosystem.
                 </div>
             </div>
         </section>
@@ -518,12 +518,12 @@ body {
                     <span>Technology & Automation</span>
                 </div>
                 <div class="interest-item">
-                    <span class="interest-icon">🎨</span>
-                    <span>Digital Art & Design</span>
+                    <span class="interest-icon">☁️</span>
+                    <span>Cloud Computing & DevOps</span>
                 </div>
                 <div class="interest-item">
-                    <span class="interest-icon">📱</span>
-                    <span>Social Media Strategy</span>
+                    <span class="interest-icon">🤖</span>
+                    <span>Artificial Intelligence & ML</span>
                 </div>
             </div>
         </section>
