--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     const PROFILE_DATA = {
         name: "Yogeendra Rao",
         title: "Senior Software Developer",
-        summary: "Progressive Software Developer with 10+ years of experience in design, developing software solutions for client and server applications based on current and expected demands. Works effectively in high-pressure environments to meet challenging design standards and schedule targets. Expert in programming languages, design and operations tools. Proven experience working with deadlines and interruptions.",
+        // UPDATED PROFESSIONAL SUMMARY using Option 2
+        summary: "Senior Backend Developer with a decade of expertise in building robust, high-availability server applications, specializing in the Java/Microservices (Spring/Jersey) stack and Oracle/Azure SQL databases. Combines core development proficiency with experience in Big Data tools (PySpark, Databricks) for complex data processing and reporting. Extensive experience in modern DevOps practices, including GitHub/Gitlab CI/CD, Docker, and Kubernetes, ensuring code quality via SonarQube and delivering performant solutions in high-compliance sectors like Healthcare and Financial Services.",
         contact: {
             email: "yogeendra.r@gmail.com",
             phone: "+91 9902901078",
@@ -207,7 +208,7 @@
             bg-white/5 border-white/10 dark:bg-white/5 dark:border-white/10
             hover:bg-white/10 dark:hover:bg-white/10
             bg-gray-200 border-gray-300 dark:bg-white/5 dark:border-white/10">
-            <h4 className="font-semibold text-sm text-yellow-500 dark:text-yellow-300">{title}</h4>
+            <h4 className="font-semibold text-sm text-yellow-600 dark:text-yellow-300">{title}</h4>
             <p className="text-sm text-gray-700 dark:text-gray-300">{technologies}</p>
         </div>
     );
